Fix the cursor not showing the right pointer.

--- a/main.scss
+++ b/main.scss
@@ -684,7 +684,7 @@ body {
         }
 
         a {
-            
+
         }
 
     }
@@ -857,4 +857,8 @@ body {
 #incubatorFeature {
     width: 200px;
     margin: 0 auto;
+}
+
+a {
+    cursor: pointer;
 }
